# ShbMaths

./: .gitignore  CMakeLists.txt  build.sh  maths.cpp  matrices.hpp  setup.sh  vectors.hpp
